PR29261, memory leak in parse_stab_struct_fields

PR 29261
	* stabs.c (parse_stab_struct_fields): Free "fields" on failure path.